# patchwork

./: .gitignore  AutoFix_workflow.json  CODE_OF_CONDUCT.md  CodeReview.py  CodeReview_workflow.json  INSTALL.md  README.md  Roadmap.md  TransformJSON.py  TransformJSON_workflow.json  VulnFix.py  VulnFixPR.py  diagram.md  gitlab_pr_review.yml  pyproject.toml  reproduce_issue.py  steps.artifact.json  steps.yml  style.md  test-style.md  test_line_endings.py  test_line_endings_edge_cases.py  test_lineendings.py  workflow-builder-app.py
.github/workflows/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  apply-labels-on-pr.yml  close-stale-ci-prs.yml  release.yml  test.yml
.github/workflows/ISSUE_TEMPLATE/: 1-report-bug.yaml  2-request-feature.yml
configs/PRReview/: config.yml
patchwork/: README.md  app.py  gui.py  interpreter.py  logger.py  managed_files.py  package.json  patchflow.py  patchwork_interpreter.py  step.py  test_crlf.txt  test_endings.py  test_line_endings.py  tsconfig.json  verify_endings.py
patchwork/SlackAgent/: SlackAgent.py
patchwork/common/: constants.py  ignore.py  server.py  utils.py
patchwork/common/client/: patched.py  scm.py  sonar.py
patchwork/common/context_strategy/: context_strategies.py  cpp.py  generic.py  java.py  javascript.py  kotlin.py  languages.py  langugues.py  position.py  protocol.py  python.py
patchwork/common/multiturn_strategy/: agentic_strategy.py  agentic_strategy_v2.py  analyze_implement.py  multistage_strategy.py  multiturn_strategy.py  planning_strategy.py
patchwork/common/tools/: __init__.py  agentic_tools.py  api_tool.py  bash_tool.py  code_edit_tools.py  csvkit_tool.py  db_query_tool.py  git_tool.py  github_tool.py  grep_tool.py  tool.py
patchwork/common/utils/: browser_initializer.py  dependency.py  filter_paths.py  input_parsing.py  progress_bar.py  step_typing.py  types.py  typing.py  user_config.py  utils.py  zoho_token_manager.py
patchwork/patchflows/: README.md  __init__.py
patchwork/patchflows/AutoFix/: AutoFix.py  README.md  __init__.py  defaults.yml
patchwork/patchflows/DependencyUpgrade/: DependencyUpgrade.py  README.md  __init__.py  defaults.yml  dependency_upgrade_prompt.json
patchwork/patchflows/GenerateCodeUsageExample/: GenerateCodeUsageExample.py  README.md  default_prompt.json
patchwork/patchflows/GenerateDiagram/: GenerateDiagram.py  README.md  default_prompt.json  defaults.yml
patchwork/patchflows/GenerateDocstring/: GenerateDocstring.py  README.md  defaults.yml  prompt.json
patchwork/patchflows/GenerateREADME/: GenerateREADME.py  README.md  __init__.py  defaults.yml  generate_readme_prompt.json
patchwork/patchflows/GenerateUnitTests/: GenerateUnitTests.py  README.md  default_prompt.json  defaults.yml
patchwork/patchflows/GenerateUsageExample/: GenerateUsageExample.py
patchwork/patchflows/LLMProxyEndpoint/: LLMProxyEndpoint.py
patchwork/patchflows/LogAnalysis/: LogAnalysis.py  __init__.py  defaults.yml
patchwork/patchflows/PRReview/: PRReview.py  README.md  defaults.yml  pr_review_prompt.json
patchwork/patchflows/ResolveIssue/: README.md  ResolveIssue.py  defaults.yml  prompt.json
patchwork/patchflows/SonarFix/: SonarFix.py  __init__.py  default_prompt.json  defaults.yml
patchwork/patchflows/Temp/: Temp.py
patchwork/patchflows/TestSlackAgent/: README.md  TestSlackAgent.py  __init__.py
patchwork/scripts/: gui.py  steps_inspection.py
patchwork/steps/: README.md  __init__.py  steps_collection.yml
patchwork/steps/AgenticLLM/: AgenticLLM.py  README.md  typed.py
patchwork/steps/AgenticLLMV2/: AgenticLLMV2.py  README.md  typed.py
patchwork/steps/AnalyzeImpact/: AnalyzeImpact.py  README.md  typed.py
patchwork/steps/BrowserUse/: BrowserUse.py  README.md  typed.py
patchwork/steps/CallAPI/: CallAPI.py  README.md  typed.py
patchwork/steps/CallCode2Prompt/: CallCode2Prompt.py  README.md  TestCallCode2Prompt.py  typed.py
patchwork/steps/CallCommand/: CallCommand.py  README.md  typed.py
patchwork/steps/CallInterpreter/: CallInterpreter.py  README.md
patchwork/steps/CallLLM/: CallLLM.py  README.md  typed.py
patchwork/steps/CallOpenAI/: CallOpenAI.py  README.md  typed.py
patchwork/steps/CallSQL/: CallSQL.py  README.md  typed.py
patchwork/steps/CallShell/: CallShell.py  README.md  typed.py
patchwork/steps/Combine/: Combine.py  README.md  typed.py
patchwork/steps/CommitChanges/: CommitChanges.py  README.md  typed.py
patchwork/steps/CreateIssue/: CreateIssue.py  README.md  typed.py
patchwork/steps/CreateIssueComment/: CreateIssueComment.py  README.md  typed.py
patchwork/steps/CreatePR/: CreatePR.py  README.md  typed.py
patchwork/steps/CreatePRComment/: CreatePRComment.py  README.md  typed.py
patchwork/steps/DatabaseAgent/: DatabaseAgent.py  README.md  typed.py
patchwork/steps/ExtractCode/: ExtractCode.py  README.md  typed.py
patchwork/steps/ExtractCodeContexts/: ExtractCodeContexts.py  typed.py
patchwork/steps/ExtractCodeMethodForCommentContexts/: ExtractCodeMethodForCommentContexts.py  README.md  typed.py
patchwork/steps/ExtractDiff/: ExtractDiff.py  README.md  typed.py
patchwork/steps/ExtractModelResponse/: ExtractModelResponse.py  README.md  typed.py
patchwork/steps/ExtractPackageManagerFile/: ExtractPackageManagerFile.py  README.md  TestExtractPackageManagerFile.py  typed.py
patchwork/steps/FileAgent/: FileAgent.py  README.md  typed.py
patchwork/steps/FilterBySimilarity/: FilterBySimilarity.py  README.md  typed.py
patchwork/steps/FixIssue/: FixIssue.py  README.md  typed.py
patchwork/steps/GenerateCodeRepositoryEmbeddings/: README.md  (+3 more)
scripts/: generate_steps.py  steps.artifact.yaml
tests/common/: test_app.py
tests/steps/: TestPreparePrompt.py  TestScanDepscan.py  test_CallAPI.py  test_CreateIssue.py  test_CreatePR.py  test_ExtractCode.py  test_ExtractModelResponse.py  test_GenerateEmbeddings.py  test_ModifyCode.py  test_PreparePR.py  test_PreparePrompt.py  test_QueryEmbeddings.py  test_ReadIssues.py  test_ReadPRDiffs.py  test_ScanDepscan.py  test_ScanSemgrep.py  test_ScanSonar.py  test_SimplifiedLLM.py  test_SlackMessage.py
(+144 files in other folders)
