[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.11.0"
click = "~8.1.0"
openai = "^1.13.3"
tree-sitter-languages = "~1.10.2"
python-gitlab = "^4.4.0"
pygithub = "~2.1.1"
gitpython = "~3.1.40"
pydantic = "~2.8.2"
tiktoken = "~0.6.0"
libcst = "~1.1.0"
patched-code2prompt = "0.2.0"
pyyaml = "^6.0.1"
packageurl-python = "~0.15.0"
semver = "~3.0.2"
requests = "^2.32.0"
chardet = "~5.2.0"
attrs = "~23.2.0"
google-ai-generativelanguage = "~0.6.7"
anthropic = "~0.31.2"
rich = "~13.7.1"
chevron = "~0.14.0"
scikit-learn = "^1.5.0"

# pinning transitive dependencies
tree-sitter = "~0.21.3"
numpy = [
    { version = "^1.26", python = "^3.12", optional = true},
    { version = "^1.24", python = "^3.8, <=3.11", optional = true}
]
pandas = [
    { version = "^2.1.4", python = "^3.12", optional = true},
    { version = "^2.0.3", python = "3.8, <=3.11", optional = true}
]
scipy = [
    { version = "^1.7.3", python = "^3.12", optional = true},
    { version = "^1.6.1", python = "3.8, <=3.11", optional = true}
]
```