[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.11.0"
click = "^8.1.0"
openai = "^1.46.1"
tree-sitter-languages = "~1.10.2"
python-gitlab = "^4.4.0"
pygithub = "~2.1.1"
gitpython = "^3.1.40"
pydantic = "~2.8.2"
libcst = "~1.1.0"
patched-code2prompt = "~0.9.0.dev1"
pyyaml = "^6.0.1"
packageurl-python = "~0.15.0"
semver = "~3.0.2"
requests = "^2.31.0"
chardet = "~5.2.0"
attrs = "~23.2.0"
google-generativeai = "~0.8.1"
anthropic = "~0.34.2"
rich = "~13.7.1"
chevron = "~0.14.0"
giturlparse = "~0.12.0"
scikit-learn = "^1.3.2"
json-repair = "~0.30.0"
# pinning transitive dependencies
tree-sitter = "~0.21.3"
numpy = [
    { version = "^1.26", python = "^3.12", optional = true},
    { version = "^1.24", python = "^3.9, <=3.11", optional = true}
]
pandas = [
    { version = "^2.1.4", python = "^3.12", optional = true},
    { version = "^2.0.3", python = "3.9, <=3.11", optional = true}
]
scipy = [
    { version = "^1.7.3", python = "^3.12", optional = true},
    { version = "^1.6.1", python = "3.9, <=3.11", optional = true}
]

# extras
# security
semgrep = {version = "^1.51.0", optional = true}
owasp-depscan = {version = "5.2.15", optional = true }

# rag
chromadb = {version = "~0.4.24", optional = true }
sentence-transformers = {version = "~2.7.0", optional = true }

# rag - pinning transitive dependencies
opentelemetry-exporter-otlp-proto-grpc = { version = "^1.25.0", optional = true }
onnxruntime = { version = "^1.19.2", optional = true }
torch = {version = "~2.4.1", optional = true }
orjson = {version = "~3.9.15", optional = true }

# notifications
slack-sdk = {version = "~3.28.0", optional = true }
expand-star-imports = true
ignore-init-module-imports = true
